doc: CSS - fix alignment of code block in figure blocks
BTW: minor profread of reST.rst

--- a/docs/_themes/searx/static/searx.css
+++ b/docs/_themes/searx/static/searx.css
@@ -90,9 +90,15 @@ div.rst-example {
   }
 }
 
+/* code block in figures
+ */
+
+div.highlight pre {
+    text-align: left;
+}
+
 /* Table theme
 */
-
 
 thead, tfoot {
   background-color: #fff;
